docs/book/samples/appa/needless_continuation_check.out
error[formatting]: needless continuation: this statement fits on one line (32 characters)
  --> needless_continuation_check.kso:2:3
   2 |   . sum
         ^
